(- doc fix) Updating the README a bit.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{     "author" : "elliottcable (http://ell.io/tt)"
+{     "author" : "ELLIOTTCABLE (http://ell.io/tt)"
 ,"description" : "Percival painlessly perceives (perhaps, ‘pretty prints’?) peoples’ precious, preferred possessions."
    
 ,       "name" : "percival"
